--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <button id="open">Buka</button>
       <button id="reset">Tutup</button>
     </div>
+    <audio id="valentine-audio" src="asset/youngkai.mp3" loop></audio>
     <script src="index.js"></script>
   </body>
 </html>
